# skillathon-sahay

./: .gitignore  README.md  api.yml  docker-compose.yaml
mentor-provider/: Cargo.toml  search.http
mentor-provider/src/: main.rs
sahay-bap/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
sahay-bap/docs/: prompt.txt
sahay-bap/migrations/2023-02-22-133715_create_users/: up.sql
sahay-bap/src/: main.rs  model.rs  schema.rs  server.rs  session.rs
sahay-ui/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
sahay-ui/src/: store.js
sahay-ui/src/routes/: +layout.svelte  +page.svelte  Header.svelte
sahay-ui/src/routes/about/: +page.svelte
sahay-ui/src/routes/signup/: +page.svelte
schemas/: ProofOfAssociation.json
