[package]
name = "sahay-bap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
actix-web = "4.3.0"
actix-rt = "2.4.0"
r2d2 = "0.8.10"
reqwest = "0.11.14"
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.23"
tokio = { version = "1.14.0", features = ["full"] }
rand = "0.8.5"
log = "0.4.17"
grpc = "0.8.3"
uuid = {version = "1.3.0", features = ["serde", "v4"]}
env_logger = "0.10.0"
serde_json = "1.0.93"
